[package]
name = "christmas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rand = "0.8.4"
chrono = "0.4.38"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite_migration = "1.2.0"
