[package]
name = "christmas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
fastrand = "2.3.0"
# rusqlite = { version = "0.31.0", features = ["bundled"] }
# rusqlite_migration = "1.2.0"
dioxus = { version = "0.6.3", features = ["web"] }


[target.wasm32-unknown-unknown]
rustflags = "--cfg getrandom_backend=\"wasm_js\""

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
